--- a/photometry_homework.ipynb
+++ b/photometry_homework.ipynb
@@ -15,8 +15,7 @@
     "21 October 2020\n",
     "Due: Thursday (November 5)\n",
     "\n",
-    "\n",
-    "The primary goal of this homework is for the student to become familiar with the tools for photometry that will be needed for their class project. "
+    "Worked with Nazar Budaiev"
    ]
   },
   {
